Bug 290483 - QIF import does not work on Windows
Summary: QIF import does not work on Windows
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-03 11:35 UTC by Cristian Oneț
Modified: 2012-01-04 16:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2012-01-03 11:35:15 UTC
Version:           4.6.1 (using KDE 4.7.4) 
OS:                MS Windows

Importing a QIF file does not work.

Reproducible: Always

Steps to Reproduce:
Select a file from 'File'->'Import'->'QIF'.

Actual Results:  
A message box appears with empty import results.

Expected Results:  
Data should be imported.

OS: WindowsNT (i686) release Windows 7
Compiler: cl.exe
Comment 1 Cristian Oneț 2012-01-04 15:49:23 UTC
Git commit c9a91681a20d9d1d47b25e915e1c58f537b89998 by Cristian Oneț.
Committed on 04/01/2012 at 16:38.
Pushed by conet into branch 'master'.

Make the QIF import on Windows usable.

The QIF import on Windows never worked unless 'cat' was installed due to the preprocessing command feature.

M  +9    -0    kmymoney/converter/mymoneyqifreader.cpp

http://commits.kde.org/kmymoney/c9a91681a20d9d1d47b25e915e1c58f537b89998
Comment 2 Cristian Oneț 2012-01-04 15:50:12 UTC
Git commit 8cf155eec8c73a3cf17dcf5ae51f257ebf818d4f by Cristian Oneț.
Committed on 04/01/2012 at 16:38.
Pushed by conet into branch '4.6'.

Make the QIF import on Windows usable.

The QIF import on Windows never worked unless 'cat' was installed due to the preprocessing command feature.

M  +9    -0    kmymoney/converter/mymoneyqifreader.cpp

http://commits.kde.org/kmymoney/8cf155eec8c73a3cf17dcf5ae51f257ebf818d4f
Comment 3 Cristian Oneț 2012-01-04 15:57:43 UTC
Until the fix makes it into 4.6.2 and that gets packaged by the KDE on Windows team a simple workaround is to download Unix tools for Windows [1] and extract 'cat.exe' in the same folder as 'kmymoney.exe'.

[1] http://unxutils.sourceforge.net/UnxUpdates.zip
Comment 4 dilishkurupath 2012-01-04 16:09:03 UTC
yep, it works.

I downloaded the above package + copied cat.exe from the unix tools into the bin directory (where kmoney.exe resides) and it worked like a charm !

Thank you !

DK