BUG: 290483

Make the QIF import on Windows usable.

The QIF import on Windows never worked unless 'cat' was installed due to the preprocessing command feature.